adding css file and styles

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+
+    <body>
+
 <!-- navigation -->
 <header>
     <h1>
@@ -50,3 +59,6 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
   </footer>
+  
+    </body>
+</html>
