--- a/index.html
+++ b/index.html
@@ -137,6 +137,34 @@
   </div>
 </article>
 </section>
+<!-- "reach out" section -->
+<section>
+  <h2>Reach Out</h2>
+  <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.429570559589!2d-77.30516338466275!3d38.84552287957853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64e96d2139b7b%3A0xb2e425d4bf094067!2sMain%20St%2C%20Fairfax%2C%20VA!5e0!3m2!1sen!2sus!4v1629681157855!5m2!1sen!2sus" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk to you!
+      </p>
+      <address>
+        55 Main Street <br/>
+        Some Town, Ca <br/>
+        12345<br />
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
+  </div>
+</section>
   
   <!-- footer -->
   <footer>
