--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 </article>
 </section>
 <!-- "reach out" section -->
-<section>
-  <h2>Reach Out</h2>
+<section id="reach-out" class="contact">
+  <h2 class="section-title secondary-border">Reach Out</h2>
   <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.429570559589!2d-77.30516338466275!3d38.84552287957853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64e96d2139b7b%3A0xb2e425d4bf094067!2sMain%20St%2C%20Fairfax%2C%20VA!5e0!3m2!1sen!2sus!4v1629681157855!5m2!1sen!2sus" 
       width="400" 
@@ -148,7 +148,7 @@
       allowfullscreen="" 
       loading="lazy">
     </iframe>
-    <div>
+    <div class="testtest">
       <h3>Run Buddy</h3>
       <p>
         Any questions or concerns before signing up?
