--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       allowfullscreen="" 
       loading="lazy">
     </iframe>
-    <div class="testtest">
+    <div>
       <h3>Run Buddy</h3>
       <p>
         Any questions or concerns before signing up?
@@ -170,7 +170,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
       <div>
-       <a href="#">Read Our Privacy Policy</a><br />
+       <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
         &copy; 2019 Run Buddy, Inc.
       </div>
   </footer>
