--- a/index.html
+++ b/index.html
@@ -1,179 +1,188 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Run Buddy</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
 
-    <body>
+<head>
+  <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
 
-<!-- navigation -->
-<header>
+<body>
+
+  <!-- navigation -->
+  <header>
     <h1>
-        <a href="/">RUN BUDDY</a>
+      <a href="/">RUN BUDDY</a>
     </h1>
-    <nav><!-- Unordered list element -->
-        <ul>
-          <!-- List item element-->
-          <li>
-            <!-- Anchor element -->
-            <a href="#what-we-do">What We Do</a>
-          </li>
-          <li>
-            <a href="#what-you-do">What You Do</a>
-          </li>
-          <li>
-            <a href="#your-trainers">Your Trainers</a>
-          </li>
-          <li>
-            <a href="#reach-out">Reach Out</a>
-          </li>
-        </ul></nav>
+    <nav>
+      <!-- Unordered list element -->
+      <ul>
+        <!-- List item element-->
+        <li>
+          <!-- Anchor element -->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+          <a href="#reach-out">Reach Out</a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  
+
   <!-- hero/jumbotron -->
   <section class="hero">
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
-    <form>
-      <label for="name">Enter full name:</label>
-      <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
-      <label for="email">Enter email address:</label>
-      <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
-      <label for="phone">Enter a Telephone Number</label>
-      <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
-      <p>
-        Have you worked with a Trainer before?
-        <input type="radio" name="trainer-confirm" id="trainer-yes" />
-        <label for="trainer-yes">Yes</label>
-        <input type="radio" name="trainer-confirm" id="trainer-no" />
-        <label for="trainer-no">No</label>
-      </p>
-      <p>
-        <label for="age-checkbox">I acknowledge that I am at least 18 years of age.</label>
-        <input type="checkbox" name="age-confirm" id="age-checkbox" />
-        
-      </p>
-      <button type="submit">Get Running!</button>
-    </form>
+      <form>
+        <label for="name">Enter full name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+        <label for="email">Enter email address:</label>
+        <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
+        <label for="phone">Enter a Telephone Number</label>
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
+        <p>
+          Have you worked with a Trainer before?
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+          <label for="trainer-yes">Yes</label>
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
+          <label for="trainer-no">No</label>
+        </p>
+        <p>
+          <label for="age-checkbox">I acknowledge that I am at least 18 years of age.</label>
+          <input type="checkbox" name="age-confirm" id="age-checkbox" />
+
+        </p>
+        <button type="submit">Get Running!</button>
+      </form>
     </div>
   </section>
-  
-<!-- "what we do" section -->
-<section id="what-we-do" class="intro">
-  <h2 class="section-title primary-border">What We Do</h2>
-  <p>
-    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-  </p>
-</section>
 
-<!-- "what you do" section -->
-<section id="what-you-do" class="steps">
-  <h2 class="section-title secondary-border">What You Do</h2>
-
-  <div>
-    <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
-    <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-    <p>You're already here, so why not?</p>
-  </div>
-
-  <div>
-    <img src="./assets/images/01-04-svgs/step-2.svg" alt="" />
-    <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-    <p>Are you here to build muscle, lose weight, or just feel good?</p>
-  </div>
-
-  <div>
-    <img src="./assets/images/01-04-svgs/step-3.svg" alt="" />
-    <h3>Step 3: <span>Get Running.</span></h3>
-    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-  </div>
-
-  <div>
-    <img src="./assets/images/01-04-svgs/step-4.svg" alt="" />
-    <h3>Step 4: See Results.</h3>
-    <p>Bi-weekly checkins with your trainer will keep you focused</p>
-  </div>
-</section>
-
-<!-- Trainer Bios-->
-<section id="your-trainers" class="trainers">
-  <h2 class="section-title primary-border">Meet the Trainers</h2>
-  <article class="trainer">
-    <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-    <div class="trainer-bio text-left">
-      <h3>Arron Stephens</h3>
-      <h4>Speed / Strength</h4>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-      </p>
-    </div>
-  </article>
-  <!-- second trainer bio -->
-<article class="trainer">
-  <div class="trainer-bio text-right">
-    <h3>Joanna Gill</h3>
-    <h4>Endurance</h4>
+  <!-- "what we do" section -->
+  <section id="what-we-do" class="intro">
+    <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
-  </div>
-  <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-</article>
+  </section>
 
-<!-- third trainer bio -->
-<article class="trainer">
-  <img src="./assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-</article>
-</section>
-<!-- "reach out" section -->
-<section id="reach-out" class="contact">
-  <h2 class="section-title secondary-border">Reach Out</h2>
-  <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.429570559589!2d-77.30516338466275!3d38.84552287957853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64e96d2139b7b%3A0xb2e425d4bf094067!2sMain%20St%2C%20Fairfax%2C%20VA!5e0!3m2!1sen!2sus!4v1629681157855!5m2!1sen!2sus" 
-      width="400" 
-      height="400" 
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy">
-    </iframe>
+  <!-- "what you do" section -->
+  <section id="what-you-do" class="steps">
+    <h2 class="section-title secondary-border">What You Do</h2>
+
     <div>
-      <h3>Run Buddy</h3>
-      <p>
-        Any questions or concerns before signing up?
-        <br />
-        Let us know and we'll be happy to talk to you!
-      </p>
-      <address>
-        55 Main Street <br/>
-        Some Town, Ca <br/>
-        12345<br />
-        P: 555.RUN.BUDZ (555.786.2839)<br/>
-        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-      </address>
+      <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
+      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+      <p>You're already here, so why not?</p>
     </div>
-  </div>
-</section>
-  
+
+    <div>
+      <img src="./assets/images/01-04-svgs/step-2.svg" alt="" />
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+      <p>Are you here to build muscle, lose weight, or just feel good?</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/01-04-svgs/step-3.svg" alt="" />
+      <h3>Step 3: <span>Get Running.</span></h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/01-04-svgs/step-4.svg" alt="" />
+      <h3>Step 4: See Results.</h3>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
+    </div>
+  </section>
+
+  <!-- Trainer Bios-->
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet the Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/01-05-trainers/trainer-1.jpg"
+        alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/01-05-trainers/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+  </section>
+  <!-- "reach out" section -->
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
+    <div class="contact-info">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.429570559589!2d-77.30516338466275!3d38.84552287957853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64e96d2139b7b%3A0xb2e425d4bf094067!2sMain%20St%2C%20Fairfax%2C%20VA!5e0!3m2!1sen!2sus!4v1629681157855!5m2!1sen!2sus"
+        width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
+  </section>
+
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
-      <div>
-       <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
-        &copy; 2019 Run Buddy, Inc.
-      </div>
+    <div>
+      <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
+      &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
-  
-    </body>
+
+</body>
+
 </html>
