--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Run Buddy</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
