--- a/index.html
+++ b/index.html
@@ -47,29 +47,37 @@
         probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
       </p>
     </div>
+
     <div class="hero-form">
       <h3>Get Started Today</h3>
-      <p>Fill out this form and one of our trainers will schedule a consult</p>
+      <p>Fill out this form and one of our trainers will schedule a consult.</p>
       <form>
-        <label for="name">Enter full name:</label>
-        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
-        <label for="email">Enter email address:</label>
-        <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
-        <label for="phone">Enter a Telephone Number</label>
+        <label for="name">Your Name</label>
+        <input type="text" placeholder="Your Name" id="name" name="name" class="form-input" />
+        <label for="email">Your Email</label>
+        <input type="email" placeholder="Email Address" id="email" name="email" class="form-input" />
+        <label for="phone">Phone Number</label>
         <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
         <p>
-          Have you worked with a Trainer before?
-          <input type="radio" name="trainer-confirm" id="trainer-yes" />
-          <label for="trainer-yes">Yes</label>
-          <input type="radio" name="trainer-confirm" id="trainer-no" />
-          <label for="trainer-no">No</label>
+          Have you worked out with a trainer before?
+          <span class="radio-wrapper">
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <label for="trainer-yes">Yes</label>
+          </span>
+          <span class="radio-wrapper">
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <label for="trainer-no">No</label>
+          </span>
         </p>
         <p>
-          <label for="age-checkbox">I acknowledge that I am at least 18 years of age.</label>
-          <input type="checkbox" name="age-confirm" id="age-checkbox" />
-
+          <span class="checkbox-wrapper">
+            <input type="checkbox" name="checkpoint1" id="checkbox" />
+            <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+          </span>
         </p>
-        <button type="submit">Get Running!</button>
+        <button type="submit">
+          Get running!
+        </button>
       </form>
     </div>
   </section>
